About was broken

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="pyro-nav-link-wrapper" >
 				<div class="pyro-nav-item" ><a href="#/contact"><span class="pyro-nav-link">Contact</span></a></div>
 				<div class="pyro-nav-item" ><a href="#/resume"><span class="pyro-nav-link">Resume</span></a></div>
-				<div class="pyro-nav-item" ><a href="#/home"><span class="pyro-nav-link">About</span></a></div>
+				<div class="pyro-nav-item" ><a href="#/about"><span class="pyro-nav-link">About</span></a></div>
 			</div>
 		</div>
 	</nav>
