--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>PyroDev</title>
 	<link rel="stylesheet" type="text/css" href="app/css/pyrodev.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
 	<!-- 
 		Hello,
 
