Reset the CSS, with styling to about and footer.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<nav class="pyro-nav">
 		<div class="pyro-nav-container">
 			<div class="pyro-logo-wrapper" >
-				<a class="pyro-logo" href="#/home">Logo</a>
+				<a class="pyro-logo" href="#/home">PyroDev</a>
 			</div>
 			<div class="pyro-nav-link-wrapper" >
 				<div class="pyro-nav-item" ><a href="#/contact"><span class="pyro-nav-link">Contact</span></a></div>
@@ -38,7 +38,11 @@
 		</div>
 	</div>
 	<div class="pyro-footer">
-		This is the footer
+		<ul class="pyro-links">
+			<li><i class="fa fa-github"></i></li>
+			<li><i class="fa fa-linkedin-square"></i></li>
+			<li><i class="fa fa-twitter-square"></i></li>
+		</ul>
 	</div>
 	<div class="pyro-back-cover"></div>
 	<script type="text/javascript" src="/node_modules/angular/angular.js"></script>
