--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>PyroDev</title>
-	<link rel="stylesheet" type="text/css" href="app/css/pyrodev.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
 	<!-- 
 		Hello,
 
@@ -18,6 +14,12 @@
 		Patrick (PyroDev)
 
 	-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1">
+	<title>PyroDev</title>
+	<link rel="stylesheet" type="text/css" href="app/css/pyrodev.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
+
 </head>
 <body ng-app="app">
 	<nav class="pyro-nav">
@@ -28,6 +30,7 @@
 			<div class="pyro-nav-link-wrapper" >
 				<div class="pyro-nav-item" ><a href="#/contact"><span class="pyro-nav-link">Contact</span></a></div>
 				<div class="pyro-nav-item" ><a href="#/resume"><span class="pyro-nav-link">Resume</span></a></div>
+				<div class="pyro-nav-item"><a href="#/blog"><span class="pyro-nav-link">Blog</span></a></div>
 				<div class="pyro-nav-item" ><a href="#/about"><span class="pyro-nav-link">About</span></a></div>
 			</div>
 		</div>
@@ -37,13 +40,13 @@
 			<!-- This is where all the 'sub' views will be displayed -->
 		</div>
 	</div>
-	<div class="pyro-footer">
+<!-- 	<div class="pyro-footer">
 		<ul class="pyro-links">
 			<li><i class="fa fa-github"></i></li>
 			<li><i class="fa fa-linkedin-square"></i></li>
 			<li><i class="fa fa-twitter-square"></i></li>
 		</ul>
-	</div>
+	</div> -->
 	<div class="pyro-back-cover"></div>
 	<script type="text/javascript" src="/node_modules/angular/angular.js"></script>
 	<script src="/node_modules/angular-route/angular-route.js"></script>
