More changes to the home page

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <body ng-app="app">
 	<nav class="pyro-nav">
 		<div class="pyro-nav-container">
-			<div class="pyro-logo-wrapper" >
-				<a class="pyro-logo" href="#/home">PyroDev</a>
+			<div class="pyro-logo-wrapper page-item" >
+				<a class="pyro-logo" href="#home">PyroDev</a>
 			</div>
 			<div class="pyro-nav-link-wrapper" >
 				<div class="pyro-nav-item" ><a href="#/contact"><span class="pyro-nav-link">Contact</span></a></div>
-				<div class="pyro-nav-item" ><a href="#/resume"><span class="pyro-nav-link">Resume</span></a></div>
-				<div class="pyro-nav-item"><a href="#/blog"><span class="pyro-nav-link">Blog</span></a></div>
-				<div class="pyro-nav-item" ><a href="#/about"><span class="pyro-nav-link">About</span></a></div>
+				<!-- <div class="pyro-nav-item"><a href="#/blog"><span class="pyro-nav-link">Blog</span></a></div> -->
+				<div class="pyro-nav-item page-item" ><a href="#resume"><span class="pyro-nav-link">Resume</span></a></div>
+				<div class="pyro-nav-item page-item" ><a href="#about"><span class="pyro-nav-link">About</span></a></div>
 			</div>
 		</div>
 	</nav>
@@ -48,6 +48,7 @@
 		</ul>
 	</div> -->
 	<div class="pyro-back-cover"></div>
+	<script type="text/javascript" src="app/scripts/jquery.js"></script>
 	<script type="text/javascript" src="/node_modules/angular/angular.js"></script>
 	<script src="/node_modules/angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="app.js"></script>	
